--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "mongoose": "^5.13.6",
-    "puppeteer": "^11.0.0"
+    "playwright": "^1.16.3"
   },
   "pkg": {
     "scripts": [
