--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "mongoose": "^5.13.6",
+    "node-worker-threads-pool": "^1.5.1",
     "playwright": "^1.16.3"
   },
   "pkg": {
