--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-linux": "npx caxa --input . --output ./dist/csgo-tradeup-cli-linux -- \"{{caxa}}/node_modules/.bin/node\" \"{{caxa}}/index.js\"",
     "build-windows": "npx caxa --input . --output ./dist/csgo-tradeup-cli-windows.exe -- \"{{caxa}}/node_modules/.bin/node\" \"{{caxa}}/index.js\"",
-    "build-macos": "npx caxa --input . --output ./dist/csgo-tradeup-cli-macos.sh -- \"{{caxa}}/node_modules/.bin/node\" \"{{caxa}}/index.js\"",
-    "build": "npm run build-linux & npm run build-windows & npm run build-macos"
+    "build-macos": "npx caxa --input . --output ./dist/csgo-tradeup-cli-macos.app -- \"{{caxa}}/node_modules/.bin/node\" \"{{caxa}}/index.js\""
     },
   "author": "",
   "license": "ISC",
