--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
+    "follow-redirects": "^1.15.3",
     "jsdom": "^16.7.0",
     "mongoose": "^5.13.6",
     "node-worker-threads-pool": "^1.5.1",
